--- a/static/home.html
+++ b/static/home.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    <link rel='stylesheet' type='text/css' href='static/css/styles.css'>
+    <link rel='stylesheet' type='text/css' href='css/styles.css'>
     <title>Barbie MotherFucker</title>
 </head>
 <body>
-    <div>
+    <div class='loading' hidden="hidden"></div>
+    <div class='content'>
         <h1 class='main-title'>Barbie Web Interface</h1>
         <form action='/submit' method='post' enctype='multipart/form-data'>
             <div>
@@ -39,6 +40,5 @@
         </form>
     </div>
     <script src='https://code.jquery.com/jquery-3.1.0.min.js'></script>
-    <script src="static/js/barbie.js"></script>
-    <script src="static/js/main.js"/></script>
+    <script src="js/home.js"/></script>
 </body>
