Lots of bug fixes, improved UI

--- a/static/home.html
+++ b/static/home.html
@@ -23,7 +23,7 @@
                 </div>
             <div class='files-div'>
                 <div class='input-files-div' id='code-files'>
-                    <h3>Arquivos de Codigo</h3>
+                    <h3>Arquivos de Código</h3>
                     <div class='files-table'>
                         <table id='code-files-table'>
                             <tbody>
